--- a/build.local.properties
+++ b/build.local.properties
@@ -1,11 +1,13 @@
-# $OPENSEXTANT_HOME is set in shell environment, as well as here.
-# TODO: settle on a single place to set global variables for build and install
-# This is used by Ant to create ./solr/gazetteer and ./jetty/
-#
-opensextant.home=/path/to/opensextant_install
-solr_home=/path/to/opensextant-solr
-
+#set this to the location of your locally installed Kettle
 # kettle.home="C:\Program Files\Kettle\data-integration"
 kettle.home=/path/to/kettle_install
 kettle.options.jvm=-Xmx2000m
 
+# NOTE the source gazetteer data files distributed by NGA and USGS have the date of release appended
+# You must changes these values to the dates desired and actually available at the time of download
+# You can find the dates available by looking at:
+#	USGS - http://geonames.usgs.gov/domestic/download_data.htm, look for the file NationalFile_<DATE>.zip this updates quarterly(?)
+#	NGA - http://earth-info.nga.mil/gns/html/namefiles.htm, look for link "Click here to Download a single compressed zip file ... " - this updates weekly.
+
+NGA_date=20130729
+USGS_date=20130602
