--- a/build.local.properties
+++ b/build.local.properties
@@ -3,11 +3,15 @@
 kettle.home=/path/to/kettle_install
 kettle.options.jvm=-Xmx2000m
 
+# set these to your proxy host/port if you are behind a firewall (leave blank if not)
+proxy.host=proxyhost.mycompany.com
+proxy.port=80
+
 # NOTE the source gazetteer data files distributed by NGA and USGS have the date of release appended
 # You must changes these values to the dates desired and actually available at the time of download
 # You can find the dates available by looking at:
 #	USGS - http://geonames.usgs.gov/domestic/download_data.htm, look for the file NationalFile_<DATE>.zip this updates quarterly(?)
 #	NGA - http://earth-info.nga.mil/gns/html/namefiles.htm, look for link "Click here to Download a single compressed zip file ... " - this updates weekly.
 
-NGA_date=20130729
-USGS_date=20130602
+NGA_date=2013019
+USGS_date=20130811
