Added "MergedGazetteer_SMALL.txt" to artifacts generated and published (small gazetteer meant for testing only)

--- a/build.xml
+++ b/build.xml
@@ -139,7 +139,7 @@
 	</target>
 
 	<!-- zip the generated gazetteer data -->
-	<target name="zip" depends = "">
+	<target name="zip" depends = "build">
 		<zip destfile="${build.dir}/opensextant-gazetteer.zip">
 			<fileset file="${outputDir}/MergedGazetteer.txt" />
 			<fileset file="${outputDir}/MergedGazetteer_SMALL.txt" />
