--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,10 @@
 		</or>
 	</condition>
 
-
+	<property name="prebuilt.gaz.loc" value="http://opensextant.org/downloads/gazdata" />
+	<property name="prebuilt.gaz.name" value="latestGazetteer.zip" />
+	<property name="publish.gaz.name" value="opensextant-gazetteer.zip" />
+	
 	<!--====================== Targets ============================-->
 
 	<!-- deletes generated gazetteer data and logs -->
@@ -142,7 +145,7 @@
 
 	<!-- zip the generated gazetteer data -->
 	<target name="zip" depends = "build">
-		<zip destfile="${build.dir}/opensextant-gazetteer.zip">
+		<zip destfile="${build.dir}/${publish.gaz.name}">
 			<fileset file="${outputDir}/MergedGazetteer.txt" />
 			<fileset file="${outputDir}/MergedGazetteer_SMALL.txt" />
 			<fileset file="${resourceDir}/country-names-2013.csv" />
@@ -150,8 +153,17 @@
 		</zip>
 	</target>
 
+	<!-- fetch the prebuilt gazetteer data from opensextant.org -->
+	<target name="fetch.prebuilt.gaz" depends="setProxy,clean">
+		<echo> Retrieving prebuilt gazetteer from opensextant.org</echo>
+		<get src="${prebuilt.gaz.loc}/${prebuilt.gaz.name}" dest="${build.dir}/${publish.gaz.name}" />
+	</target>
+	
 	<!-- Publish the opensextant gazetteer data to the local Ivy repo-->
-	<target name="publish-local" depends="zip">
+	<!--TODO need a better way to choose between building and fetching -->
+	<!-- Uncomment one of the two following lines to choose either fetching the prebuilt gazetteer or building from source data -->
+	<!--target name="publish-local" depends="zip"-->
+	<target name="publish-local" depends="fetch.prebuilt.gaz">
 		<ivy:resolve />
 		<ivy:publish resolver="local" overwrite="true" forcedeliver="true" pubrevision="${version}.${DSTAMP}">
 			<artifacts pattern="${build.dir}/[artifact].[ext]" />
