Moved "searchOnly" determination to further down the pipeline to catch more cases of low quality names

--- a/build.local.properties
+++ b/build.local.properties
@@ -10,8 +10,8 @@ proxy.port=80
 # NOTE the source gazetteer data files distributed by NGA and USGS have the date of release appended
 # You must changes these values to the dates desired and actually available at the time of download
 # You can find the dates available by looking at:
-#	USGS - http://geonames.usgs.gov/domestic/download_data.htm, look for the file NationalFile_<DATE>.zip this updates quarterly(?)
+#	USGS - http://geonames.usgs.gov/domestic/download_data.htm, look for the file NationalFile_<DATE>.zip. This updates quarterly(?)
 #	NGA - http://earth-info.nga.mil/gns/html/namefiles.htm, look for link "Click here to Download a single compressed zip file ... " - this updates weekly.
 
-NGA_date=20140324
-USGS_date=20140204
+NGA_date=20140616
+USGS_date=20140601
